update multidim results

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -175,7 +175,7 @@ $S_{MSY}$ was calculated as a function of log($\alpha_i'$) and $\beta_i$ using:
 where, $W$ represents the Lambert W function [@scheuerellExplicitSolutionCalculating2016]. $S_{gen}$ was then calculated numerically by solving the following equation: 
 
 \begin{equation}
-  S_{MSY} = S_{gen}e^log(\alpha)-\beta_iS_{gen}
+  S_{MSY,i} = S_{gen,i}e^(log(\alpha'_{i})- \beta_i \cdot S_{gen})
   (\#eq:Sgen)
 \end{equation}
 
@@ -193,22 +193,23 @@ For comparison, we also looked at the proportion of CUs that had recent generati
 
 Estimates of $S_{gen}$ based on the Ricker_priorCap model were higher than those based on the base Ricker model for four of the five CUs (Middle Fraser, Lower Thompson, North Thompson, and South Thompson) and were approximately equal for the fifth CU (Fraser Canyon; Appendix \@ref(app:coho-appendix). As a result, generational average spawning abundance was more likely to drop below $S_{gen}$ when it was estimated using the Ricker_priorCap. Under the base Ricker model formulation, generational average spawning abundance remained above $S_{gen}$ for all years between 2000 and 2020 (Figure \@ref(fig:coho-CU-multiDim-Ricker)).  In comparison, under the Ricker_priorCap formulation, generational average abundance dropped below $S_{gen}$ in one or more years for Lower Thompson CU (2006), Middle Fraser CU (2006, 2008), and South Thompson CU (2000, 2006, 2007, 2015; Figure \@ref(fig:coho-CU-multiDim-Ricker-Cap)). As a result, at least one CU had stock status assessed as below $S_{gen}$ for 5 of the 21 years between 2000 and 2020.
 
-When CU status was assessed using the multidimensional scanning tool with lower and upper abundance-based benchmarks based on $S_{gen}$ and 0.8$S_{MSY}$ as inputs, CU status was always assessed as red for years in which the generational average spawning abundance dropped below $S_{gen}$, regardless of which stock recruit model was used to estimate benchmarks (Figures \@ref(fig:coho-CU-multiDim-Ricker), \@ref(fig:coho-CU-multiDim-Ricker-Cap)). This result occurs because according to the  multidimensional decision tree (Figure \@ref(fig:decision-tree), status is derived from abundance-based benchmarks in most years, which means that being below $S_{gen}$ is most often the trigger for a red CU status assessment. An exception occurs in the Fraser Canyon CU in years 2015-2017.  In these years, the generational average of absolute spawning abundance is < 1500 spawners and CU is assigned red status under the first node of the decision tree even though spawning abundances are above $S_{gen}$ (Figure \@ref(fig:decision-tree)). As a result, when multidimensional status was assessed using abundance-based benchmarks estimated from the base Ricker model, a proportion-based LRP for the SMU would have been breached in 3 of 21 years (2015-2017) based on Fraser Canyon spawning abundances dropping below 1500 spawners in these years (Figure \@ref(fig:coho-CU-multiDim-Ricker)). When multidimensional status was assessed using abundance-based benchmarks from the Ricker_priorCap model, a proportion-based LRP would have been breached in 7 of 21 years (2000, 2006-2008, 2015-2017) based on a combination of spawning abundances < 1500 in the Fraser Canyon CU and spawning abundances < $S_{gen}$ in other CUs (Figure \@ref(fig:coho-CU-multiDim-Ricker-Cap)). Multidimensional status based on the rapid screening tool was above red for all CUs in the most recent year, 2020, indicating that the SMU is currently above a proportion-based LRP.
+When CU status was assessed using the multidimensional scanning tool with lower and upper abundance-based benchmarks based on $S_{gen}$ and 0.8$S_{MSY}$ as inputs, CU status was always assessed as red for years in which the generational average spawning abundance dropped below $S_{gen}$, regardless of which stock recruit model was used to estimate benchmarks (Figures \@ref(fig:coho-CU-multiDim-Ricker) and \@ref(fig:coho-CU-multiDim-Ricker-Cap)). This result occurs because according to the  multidimensional decision tree (Figure \@ref(fig:decision-tree), status is derived from abundance-based benchmarks in most years, which means that being below $S_{gen}$ is most often the trigger for a red CU status assessment. An exception occurs in the Fraser Canyon CU in years 2015-2017.  In these years, the generational average of absolute spawning abundance is < 1500 spawners and CU is assigned red status under the first node of the decision tree even though spawning abundances are above $S_{gen}$ (Figure \@ref(fig:decision-tree)). As a result, when multidimensional status was assessed using abundance-based benchmarks estimated from the base Ricker model, a proportion-based LRP for the SMU would have been breached in 4 of 21 years based on Fraser Canyon spawning abundances dropping below 1500 spawners in three years (2015-2017), and one year (2000) in which the Lower Thompson CU had spawning abundance < $S_{gen}$ (Figure \@ref(fig:coho-CU-multiDim-Ricker)). When multidimensional status was assessed using abundance-based benchmarks from the Ricker_priorCap model, a proportion-based LRP would have been breached in 9 of 21 years (2000-2001, 2005-2007, 2010, 2015-2017) based on a combination of spawning abundances < 1500 in the Fraser Canyon CU and spawning abundances < $S_{gen}$ in other CUs (Figure \@ref(fig:coho-CU-multiDim-Ricker-Cap)). Multidimensional status based on the rapid screening tool was above red for all CUs in the most recent year, 2020, indicating that the SMU is currently above a proportion-based LRP.
 
-Overall, the proportion of CUs with red status differed between the multidimensional approach and the single metric approach of looking at status relative to lower benchmarks in only 2 or 3 of 21 years, depending on the Ricker model formulation. 
+Overall, the proportion of CUs with red status did not differ between  the multidimensional approach and the single metric approach of looking at status relative to lower benchmarks. 
 
 <!--
 BC comment (re figure below):
 It seems odd that there are as many 3 year running average escapements as there are annual estimates? How was the generational mean centered? Right centered and time series goes back further in time? 
 
+CW: added to the legend First geometric mean includes 2008-2000. - But let me know if you would like the plot changed to include years 08-09. 
 -->
 
-```{r coho-CU-multiDim-Ricker, fig.cap="Escapement time series for five Interior Fraser Coho CUs shown as annual escapements (lines) and 3-year geometric mean escapements (dots). Grey dots indicate years in which all CUs had multidimensional rapid status assessments above red when Sgen was estimated using the Ricker model, while red dots indicate years in which one or more CUs had multi-dimensional status assessments in the red zone, which would trigger a breach of the LRP. Solid orange lines show estimates of Sgen from the Ricker model for comparison.", warning=FALSE, echo=FALSE, fig.align="center"}
+```{r coho-CU-multiDim-Ricker, fig.cap="Escapement time series for five Interior Fraser Coho CUs shown as annual escapements (lines) and 3-year geometric mean escapements (dots). First geometric mean includes years 2008-2000. Grey dots indicate years in which all CUs had multidimensional rapid status assessments above red when Sgen was estimated using the Ricker model, while red dots indicate years in which one or more CUs had multi-dimensional status assessments in the red zone, which would trigger a breach of the LRP. Solid orange lines show estimates of Sgen from the Ricker model for comparison.", warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/coho-CU-EscpSeries-wMultiStatus-Ricker.png")
 ```
 
-```{r coho-CU-multiDim-Ricker-Cap, fig.cap="Escapement time series for five Interior Fraser Coho CUs shown as annual escapements (lines) and 3-year geometric mean escapements (dots). Grey dots indicate years in which all CUs had multidimensional rapid status assessments above red when Sgen was estimated using the Ricker\\_priorCap model, while red dots indicate years in which one or more CUs had multidimensional status assessments in the red zone, which would trigger a breach of the LRP. Solid orange lines show estimates of Sgen from the Ricker\\_priorCap model for comparison.", warning=FALSE, echo=FALSE, fig.align="center"}
-knitr::include_graphics("figure/coho-CU-EscpSeries-wMultiStatus-Ricker-Cap.png")
+```{r coho-CU-multiDim-Ricker-Cap, fig.cap="Escapement time series for five Interior Fraser Coho CUs shown as annual escapements (lines) and 3-year geometric mean escapements (dots). First geometric mean includes years 2008-2000. Grey dots indicate years in which all CUs had multidimensional rapid status assessments above red when Sgen was estimated using the Ricker\\_priorCap model, while red dots indicate years in which one or more CUs had multidimensional status assessments in the red zone, which would trigger a breach of the LRP. Solid orange lines show estimates of Sgen from the Ricker\\_priorCap model for comparison.", warning=FALSE, echo=FALSE, fig.align="center"}
+knitr::include_graphics("figure/coho-CU-EscpSeries-wMultiStatus_Ricker_priorCap.png")
 ```
 
 As a point of comparison, if a proportion-based LRP was based on all CUs being above the IFCRT distributional target, the LRP would have been breached in 4 of the 21 years between 2000 and 2020. Eight of the 11 sub-populations had generational average escapement drop below the 1000 spawner threshold in one or more years (Figure \@ref(fig:coho-Subpop-timeseries)). Sub-populations tended to differ in which years they dropped below the 1000 spawner threshold, which meant that the distributional target at least half of the subpopulations within each CU with greater than 1000 fish was more often met than not. All 11 subpopulations had generational average spawning abundances above 1000 spawners in 2020, indicating that the stock would be well above a proportion-based LRP based on the IFCRT-distributional target (Figure \@ref(fig:coho-Subpop-timeseries)).
