CH revisions on intro of both papers

--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -38,26 +38,29 @@ For Pacific salmon, @portleyLimitReferencePoints2014 reviewed the use of LRPs an
 
 
 
-Less frequently, multidimensional approaches that aggregate status over numerous biological characteristics have been applied to marine fisheries. These approaches are particularly relevant when traditional abundance-based metrics are not estimable or not applicable or when data availability is limited [@dowlingEmpiricalHarvestStrategies2015]. Multidimensional approaches allow for consideration of multiple data sources often including expert knowledge to integrate conflicting metrics within assessments. In Canada,  multidimensional reference points have been applied to snow crab [@mullowneyBasisPrecautionaryApproach2018]. The snow crab LRPs incorporate information from CPUE estimates, egg clutches and discards to extend the scope of precaution and efficacy of the management framework. For Pacific salmon, the multidimensional assessment approach introduced by (Pestal et al.) is used to approximate the integrated WSP status assessments for Pacific salmon at the scale of CUs (Holt et al. in review). Here we extend CU assessments based on the multi-dimensional approach to infer CU-level status.  
+Less frequently, multidimensional approaches that aggregate status over numerous biological characteristics have been applied to marine fisheries. These approaches are particularly relevant when traditional abundance-based metrics are not estimable or not applicable or when data availability is limited [@dowlingEmpiricalHarvestStrategies2015]. Multidimensional approaches allow for consideration of multiple data sources often including expert knowledge to integrate conflicting metrics within assessments. In Canada,  multidimensional reference points have been applied to snow crab [@mullowneyBasisPrecautionaryApproach2018]. The snow crab LRPs incorporate information from CPUE estimates, egg clutches and discards to extend the scope of precaution and efficacy of the management framework. For Pacific salmon, the multidimensional assessment approach introduced by (Pestal et al.) is used to approximate the integrated WSP status assessments for Pacific salmon at the scale of CUs (Holt et al. in review). Here we extend CU assessments based on the multidimensional approach to infer CU-level status.  
 
-Although the application of the precautionary approach for the management of Pacific salmon has focused on setting biological benchmarks for individual salmon CUs [@dfoCanadaPolicyConservation2005], the revised fisheries act includes language indicating that a single LRP may be needed for each "Major Fish Stock" [@dfoScienceAdvicePrecautionary2021]. In the context of Pacific salmon, "Major Fish Stocks" are defined as Salmon Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status.  This provision creates the need for the development of methodologies to estimate LRPs for management at the SMU level, while considering the need to maintain all CUs within an SMU above their lower management benchmarks. The present work expands on the previous work by providing guidance on establishing LRPs for management of Pacific salmon SMUs. 
+Although the application of the precautionary approach for the management of Pacific salmon has focused on setting biological benchmarks for individual salmon CUs [@dfoCanadaPolicyConservation2005], the revised fisheries act includes language indicating that a single LRP may be needed for each "Major Fish Stock" [@dfoScienceAdvicePrecautionary2021]. In the context of Pacific salmon, "Major Fish Stocks" are defined as Salmon Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status.  This provision creates the need for the development of methodologies to estimate LRPs for management at the SMU level, while considering the risk of component CUs dropping below their lower benchmarks. The present work expands on the previous work on biological benchmarks for Pacific salmon by providing guidance on establishing LRPs for Pacific salmon SMUs. 
 
+Alternative spatial scales of assessment and management are used by agencies outside of DFO for Pacific salmon, including Designatable Units used by COSEWIC and Management Units under the Pacific Salmon Treaty. These units are not aligned with the biological unit of conservation under DFO's WSP, CU, and are not considered further here.
 
-Scales of Pacific salmon assessment reporting
+The goals of this working paper were to:
 
-1. Wild Salmon Policy
-2. COSEWIC 
-3. Pacific Salmon Treaty Management Units
-4. SMUs intended to represent “major fish stocks”, which the fish stock provisions in the new Fisheries Act will be applied to.  The proposed functional definition of an SMU is a group of one or more Wild Salmon Policy Conservation Units (CUs) that are managed together with the objective of achieving a joint status. It is likely that SMUs may be updated as managed approaches evolve; reviewing SMU definitions is outside the scope of this working paper. 
--Include consequences of using SMUs not aligned with CUs (i.e,  could lose component CUs if managing only to the aggregate SMU without considering of CU-level diversity)<!--CH comment: confirm with Diana Dobson/Ron that SMUs always contain one or more CUs, never partial CUS-->
+1. Develop candidate methods for identifying SMU-level LRPs for Pacific salmon that are consistent with the Wild Salmon Policy objective of conserving biodiversity by maintaining CUs above lower biological benchmarks.  These candidate methods include LRPs based on the status of component CUs and aggregate abundance over multiple CUs, where CU assessments can be developed using a multidimensional or single-metric approaches, as appropriate. (See \@ref(est-methods))
 
--	Establish that LRPs for salmon should be consistent with the WSP
--	Unique characteristics of Pacific salmon data and assessment: e.g., diverse data available on various characteristics of population dynamics,	Multiple metrics and benchmarks are available that reflect this diversity
--	Project Goal: Provide analysts and managers with methodological tools and guidance to identify LRPs for SMUs.   Having guidelines that have been reviewed and published through CSAS will provide a scientific basis for individual applications of the methodology throughout the Pacific Region in consultation with Indigenous groups and stakeholders, and ensure consistency in application.
+2. Document candidate methods for developing LRPs at the SMU-level, including data requirements and assumptions. (See \@ref(est-methods)) <!-- Add ref to git repo, or to zenodo?, i.e., static version of code?-->
+
+3. Document key uncertainties that affect LRP estimates for each method considered, including 
+uncertainties arising from missing or limited CU-level data. (See \ref(recommendations))
+
+4. Provide guidance and recommendations on the application of candidate methods over a range of data types and availability. \@ref(guidelines)
+
+Pacific salmon are unique among marine fish species because of their anadromous and semelparous life-history and significant meta-population structure, which results in differences in data availability and modelling approaches for assessments. These differences necessitate advice on LRP development that is specific to Pacific salmon, while being consistent with the principles for LRP development across species (Marentette et al. in prep). <!--CH: add marentette et al. in prep  to zotero,--> 
+
 
 
 -risks of ignoring CUs Julie Marentette pptx for TESA LRP workshop "The more divergent MU versus BU (biological unit)……
-increased bias in reference points, misleading trends from indicators, risk of serial depletion, reduced ability to apply "traditional" of serial depletion, reduced ability to apply "traditional" view of LRPs as thresholds to serious harm even if overall harvest strategy aimed to achieve PA intent
+increased bias in reference points, misleading trends from indicators, risk of serial depletion,  reduced ability to apply "traditional" view of LRPs as thresholds to serious harm even if overall harvest strategy aimed to achieve PA intent
 
 "
 -- Enhancement not included
@@ -89,8 +92,8 @@ K.Holt note: some of this may be best in guidance paper?
 ## Role of LRPs {#roleLRPs}
 
 LRPs have several roles, including triggering rebuilding plans under the Fisheries Act, communicating conservation risks to decision makers and the public, and informing management decisions about fisheries and anthropogenic threats and possible mitigation (e.g., habitat and harvest). LRPs are biologically based values that are separate from management measures, but can be used to inform management decisions. For example, LRPs can be used to identify operational control points which are points where management actions are triggered within harvest control rules, but are not necessarily operational control points themselves. Within a harvest control role, a conservation goal might be to avoid low biomass levels where serious harm is occurring which can be translated to a measurable objective to avoid spawner abundances lower than an LRP with a high probability (e.g., 95%) over a specified time period.  However, operational control points can be identified to achieve a suite of biological and socioeconomic objectives, beyond those associated with serious harm, usually by a diverse range of managers and stakeholders. In contrast, DFO's Science Sector is responsible for identifying LRPs using biological considerations [@dfoScienceAdvicePrecautionary2021]. 
-More generally, LRPs can be used within a Management Procedure Framework (or Mananagement Strategy Evaluation) to identify those procedures that achieve conservation objectives (e.g. 95% probaiblity of staying above LRP over a specified period) among other objectives, without being explicitly specified [@dfoManagementProcedureFramework2021]. This approach includes uncertainties in the biology of the stock, dynamics of the fleet, observation of abundances and associated biological characteristics, and the implementation of management decisions. LRPs are identified within the model to evaluate performance of various management procedures, where LRPs and associated spawning stock values are specific to a set of assumptions (random draws) and are integrated over uncertainties to derived over-all performance.<!--CH: is this too much jargon?--> One advantage of this approach is that a single best underlying model describing the population and fleet dynamics need not be identified; instead management procedures can be evaluated against a suite of plausible underlying models or assumptions. Although increasingly common in marine fisheries, the application of Management Procedure Frameworks is less common for Pacific salmon where the impact of diverse management levers are often difficult to quantify (e.g,. hatcheries and harvest, though see the AHA model documented by @hsrghatcheryscientificreviewgroupColumbiaRiverHatchery2009) and stocks assessmentment have typically not integrated uncertainties in estimates of spawner abundances with reference point derivation (but see @scheuerellIntegratedPopulationModel2021 and @statonIncorporatingDemographicInformation2021). This approach is widely viewed as a best practice for informing management decisions under uncertainty (ref).    
-The roles of LRPs will likely evolve for Pacific salmon over time, and an exhaustive review is beyond the scope of this paper.
+
+More generally, LRPs can be used within a Management Procedure Framework (or Management Strategy Evaluation) to identify those procedures that achieve conservation objectives (e.g. 95% probaiblity of staying above LRP over a specified period) among other objectives, without being explicitly specified [@dfoManagementProcedureFramework2021]. This approach includes uncertainties in the biology of the stock, dynamics of the fleet, observation of abundances and associated biological characteristics, and the implementation of management decisions. LRPs are identified within the model to evaluate performance of various management procedures, where LRPs and associated spawning stock values are specific to a set of assumptions (random draws) and are integrated over those uncertainties to derived overall performance.<!--CH: is this too much jargon?--> One advantage of this approach is that a single best underlying model describing the population and fleet dynamics need not be identified; instead management procedures can be evaluated against a suite of plausible underlying models or assumptions. Although increasingly common in marine fisheries, the application of Management Procedure Frameworks is less common for Pacific salmon where the impact of diverse management levers are often difficult to quantify (e.g,. hatcheries and harvest, though see the AHA model documented by @hsrghatcheryscientificreviewgroupColumbiaRiverHatchery2009) and stocks assessmentment have typically not integrated uncertainties in estimates of spawner abundances with reference point derivation (but see @scheuerellIntegratedPopulationModel2021 and @statonIncorporatingDemographicInformation2021). Simulation evaluation of management procedures is widely viewed as a best practice for informing management decisions under uncertainty (ref). The roles of LRPs will likely evolve for Pacific salmon over time, and an exhaustive review is beyond the scope of this paper.
 
 <!--CH side note:  DFO's Fisheries Sustainability checklist are typically management operational control points, and not biological LRPs per se-->
 
